--- a/CustomerManagementSystem.BL/CustomerManagementSystem.BL.csproj
+++ b/CustomerManagementSystem.BL/CustomerManagementSystem.BL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="Order.cs" />
+    <Compile Include="OrderItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
