--- a/CustomerManagementSystem.BL/CustomerManagementSystem.BL.csproj
+++ b/CustomerManagementSystem.BL/CustomerManagementSystem.BL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderItem.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
