--- a/Tests/ACM.BLTest/CMS.BLTest.csproj
+++ b/Tests/ACM.BLTest/CMS.BLTest.csproj
@@ -52,6 +52,8 @@
     <Compile Include="CustomerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProductTest.cs" />
+    <Compile Include="OrderTest.cs" />
+    <Compile Include="OrderItemTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
