Added Address Class and AddressTest

--- a/Tests/ACM.BLTest/CMS.BLTest.csproj
+++ b/Tests/ACM.BLTest/CMS.BLTest.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ProductTest.cs" />
     <Compile Include="OrderTest.cs" />
     <Compile Include="OrderItemTest.cs" />
+    <Compile Include="AddressTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
