--- a/Tests/ACM.BLTest/CMS.BLTest.csproj
+++ b/Tests/ACM.BLTest/CMS.BLTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="OrderTest.cs" />
     <Compile Include="OrderItemTest.cs" />
     <Compile Include="AddressTest.cs" />
+    <Compile Include="CustomerrepositoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
