--- a/Tests/ACM.BLTest/CMS.BLTest.csproj
+++ b/Tests/ACM.BLTest/CMS.BLTest.csproj
@@ -55,7 +55,8 @@
     <Compile Include="OrderTest.cs" />
     <Compile Include="OrderItemTest.cs" />
     <Compile Include="AddressTest.cs" />
-    <Compile Include="CustomerrepositoryTest.cs" />
+    <Compile Include="CustomerRepositoryTest.cs" />
+    <Compile Include="ProductRepositoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
